Add back selection logic for connection strings

--- a/builds/service/service-deployment.yaml
+++ b/builds/service/service-deployment.yaml
@@ -42,12 +42,26 @@ steps:
   displayName: Create test arguments file (context.json)
 
 - pwsh: |
+    if ($env:EH_ARG -and $env:IH_ARG)
+    {
+      $eh = $env:EH_ARG
+      $ih = $env:IH_ARG
+    }
+    else
+    {
+      $eh = $env:EH_KV
+      $ih = $env:IH_KV
+    }
+
     $testFile = '$(binDir)/Microsoft.Azure.Devices.Edge.Test.dll'
-    sudo --preserve-env dotnet vstest $testFile --logger:trx --testcasefilter:Name=TempSensor
+    E2E_EVENT_HUB_ENDPOINT=$eh E2E_IOT_HUB_CONNECTION_STRING=$ih sudo `
+      dotnet vstest $testFile --logger:trx --testcasefilter:Name=TempSensor
   displayName: Run tests
   env:
-    E2E_EVENT_HUB_ENDPOINT: $(EventHubConnStr2)
-    E2E_IOT_HUB_CONNECTION_STRING: $(IotHubConnStr2)
+    EH_ARG: $(connstr.eventHub)
+    EH_KV: $(EventHubConnStr2)
+    IH_ARG: $(connstr.iotHub)
+    IH_KV: $(IotHubConnStr2)
 
 - task: PublishTestResults@2
   displayName: Publish test results
