--- a/builds/service/service-deployment.yaml
+++ b/builds/service/service-deployment.yaml
@@ -54,7 +54,7 @@ steps:
     }
 
     $testFile = '$(binDir)/Microsoft.Azure.Devices.Edge.Test.dll'
-    E2E_EVENT_HUB_ENDPOINT=$eh E2E_IOT_HUB_CONNECTION_STRING=$ih sudo `
+    sudo E2E_EVENT_HUB_ENDPOINT=$eh E2E_IOT_HUB_CONNECTION_STRING=$ih `
       dotnet vstest $testFile --logger:trx --testcasefilter:Name=TempSensor
   displayName: Run tests
   env:
