--- a/builds/e2e/templates/deploy-iotuap.yaml
+++ b/builds/e2e/templates/deploy-iotuap.yaml
@@ -27,6 +27,7 @@ parameters:
   twinTester.twinUpdateSize: ''
   twinTester.twinUpdateFrequency: ''
   twinTester.twinUpdateFailureThreshold: ''
+  hostPlatform: ''
 
 steps:
   - task: CopyFiles@2
@@ -105,5 +106,6 @@ steps:
           -TwinUpdateSize "${{ parameters['twinTester.twinUpdateSize'] }}" `
           -TwinUpdateFrequency "${{ parameters['twinTester.twinUpdateFrequency'] }}" `
           -TwinUpdateFailureThreshold "${{ parameters['twinTester.twinUpdateFailureThreshold'] }}" `
+          -HostPlatform "${{ parameters['hostPlatform'] }}" `
           -BypassEdgeInstallation
       CommunicationProtocol: Http
