--- a/builds/e2e/templates/stresstest-deploy.yaml
+++ b/builds/e2e/templates/stresstest-deploy.yaml
@@ -26,6 +26,7 @@ parameters:
   twinTester.twinUpdateSize: ''
   twinTester.twinUpdateFrequency: ''
   twinTester.twinUpdateFailureThreshold: ''
+  hostPlatform: ''
 
 steps:
   - task: CopyFiles@2
@@ -80,6 +81,7 @@ steps:
           -twinUpdateSize "${{ parameters['twinTester.twinUpdateSize'] }}" \
           -twinUpdateFrequency "${{ parameters['twinTester.twinUpdateFrequency'] }}" \
           -twinUpdateFailureThreshold "${{ parameters['twinTester.twinUpdateFailureThreshold'] }}" \
+          -hostPlatform "${{ parameters['hostPlatform'] }}" \
           -cleanAll
         #Remove all pending jobs
         atrm $(atq | cut -f1)
