--- a/edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.IoTHub/Microsoft.Azure.Devices.Edge.Agent.IoTHub.csproj
+++ b/edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.IoTHub/Microsoft.Azure.Devices.Edge.Agent.IoTHub.csproj
@@ -20,8 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices" Version="1.18.1" />
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.20.3-asc-edge" />
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.18.4" />
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.22.0" />
   </ItemGroup>
 
   <ItemGroup>
