--- a/nuget.config
+++ b/nuget.config
@@ -4,5 +4,6 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="MyGetDeviceSdk" value="https://www.myget.org/F/aziot-device-sdk/api/v3/index.json" />
     <add key="MyGetEdgeExtension" value="https://www.myget.org/F/aziot-edge-extension/api/v3/index.json" />
+    <add key="localDeviceSdk" value="/home/andrew/Desktop/local-sdk/" />
   </packageSources>
 </configuration>
