--- a/builds/e2e/connectivity.yaml
+++ b/builds/e2e/connectivity.yaml
@@ -14,7 +14,7 @@ jobs:
     timeoutInMinutes: 180
     strategy:
       matrix:
-        outer pre: before
+        outer pre:
         Online:
           testrun.config: 1
           testrun.network.runProfile: "Online"
@@ -63,7 +63,7 @@ jobs:
           testrun.network.runProfile: "Cellular3G"
           testrun.duration: "01:00:00"
           deploymentFileName: ${{ item }}
-        outer post: after
+        outer post:
         loop: {{ $('deploymentFileNames') }}
     pool:
       name: $(pool.name)
