--- a/edgelet/Makefile
+++ b/edgelet/Makefile
@@ -15,7 +15,7 @@ _release=$(or $(and $(word 2,$(subst ~, ,$1)),0.${REVISION}.$(word 2,$(subst ~, 
 RPM_RELEASE?=$(call _release, ${VERSION})
 
 PACKAGE_NAME=iotedge
-PACKAGE="$(PACKAGE_NAME)-$(RPM_VERSION)"
+PACKAGE?="$(PACKAGE_NAME)-$(RPM_VERSION)"
 
 prefix?=/usr
 exec_prefix?=$(prefix)
@@ -63,29 +63,19 @@ release:
 release-kube:
 	$(HOST_URI_OPTION) VERSION=${VERSION} $(CARGO) build $(KUBE_CARGOFLAGS) --no-default-features --features runtime-kubernetes --release
 
-$(TARGET)/$(PACKAGE).tar.gz:
-	@echo Running git archive...
-	@$(GIT) archive --prefix=$(PACKAGE)/ -o $(TARGET)/$(PACKAGE).tar $(VERSION) 2> /dev/null || (echo 'Warning: $(VERSION) does not exist.' && $(GIT) archive --prefix=$(PACKAGE)/ -o $(TARGET)/$(PACKAGE).tar HEAD)
-	@echo Running git archive submodules...
-	p=`pwd` && (echo .; cd .. && git submodule foreach --recursive) | while read entering path; do \
-	    cd $$p; \
-	    temp="$${path%\'}"; \
-	    temp="$${temp#\'edgelet/}"; \
-	    path=$$temp; \
-	    [ "$$path" = "" ] && continue; \
-	    (cd $$path && $(GIT) archive --prefix=$(PACKAGE)/$$path/ HEAD > $$p/$(TARGET)/tmp.tar && tar --concatenate --file=$$p/$(TARGET)/$(PACKAGE).tar $$p/$(TARGET)/tmp.tar && rm $$p/$(TARGET)/tmp.tar); \
-	done
-	gzip -f $(TARGET)/$(PACKAGE).tar
-	rm -f $(TARGET)/$(PACKAGE).tar
-
-dist: $(TARGET)/$(PACKAGE).tar.gz
-
-dist2:
+dist:
 	$(MKDIR_P) $(TARGET)
 	$(MKDIR_P) .cargo
 	$(MKDIR_P) $(vendordir)
 	$(CARGO) vendor $(vendordir) > .cargo/config
-	$(TAR) -C .. --transform "flags=r;s/^edgelet/$(PACKAGE)/" -c -f $(TARGET)/$(PACKAGE).tar.gz -z -v --exclude-vcs --exclude-vcs-ignores edgelet
+	$(TAR) --transform "flags=r;s/^\./$(PACKAGE_NAME)-$(VERSION)/" -c -f $(TARGET)/$(PACKAGE_NAME)-$(VERSION).tar -v --exclude-vcs --exclude-vcs-ignores .
+
+	# Update the version.txt in the archive with $VERSION
+	echo "${VERSION}" > $(TARGET)/version.txt
+	$(TAR) --update -f $(TARGET)/$(PACKAGE_NAME)-$(VERSION).tar --transform 'flags=r;s|$(TARGET)/version.txt|$(PACKAGE_NAME)-$(VERSION)/version.txt|' $(TARGET)/version.txt
+	$(GZIP) -f $(TARGET)/$(PACKAGE_NAME)-$(VERSION).tar
+	rm $(TARGET)/version.txt
+
 
 distclean:
 	rm -rf .cargo
@@ -133,6 +123,21 @@ rpm:
 	$(SED) "s/@version@/${RPM_VERSION}/g; s/@release@/${RPM_RELEASE}/g;" $(srcdir)/contrib/centos/iotedge.spec > $(rpmbuilddir)/SPECS/iotedge.spec
 	$(HOST_URI_OPTION) rpmbuild $(RPMBUILDFLAGS) $(rpmbuilddir)/SPECS/iotedge.spec
 
+rpm-dist:
+	@echo Running git archive...
+	@$(GIT) archive --prefix=$(PACKAGE)/ -o $(TARGET)/$(PACKAGE).tar $(VERSION) 2> /dev/null || (echo 'Warning: $(VERSION) does not exist.' && $(GIT) archive --prefix=$(PACKAGE)/ -o $(TARGET)/$(PACKAGE).tar HEAD)
+	@echo Running git archive submodules...
+	p=`pwd` && (echo .; cd .. && git submodule foreach --recursive) | while read entering path; do \
+	    cd $$p; \
+	    temp="$${path%\'}"; \
+	    temp="$${temp#\'edgelet/}"; \
+	    path=$$temp; \
+	    [ "$$path" = "" ] && continue; \
+	    (cd $$path && $(GIT) archive --prefix=$(PACKAGE)/$$path/ HEAD > $$p/$(TARGET)/tmp.tar && tar --concatenate --file=$$p/$(TARGET)/$(PACKAGE).tar $$p/$(TARGET)/tmp.tar && rm $$p/$(TARGET)/tmp.tar); \
+	done
+	gzip -f $(TARGET)/$(PACKAGE).tar
+	rm -f $(TARGET)/$(PACKAGE).tar
+
 install: release
 	$(INSTALL_PROGRAM) -D $(TARGET)/iotedged $(DESTDIR)$(bindir)/iotedged
 	$(INSTALL_PROGRAM) -D $(TARGET)/iotedge $(DESTDIR)$(bindir)/iotedge
@@ -173,4 +178,4 @@ version:
 	@echo "rpm version:  ${RPM_VERSION}"
 	@echo "rpm release:  ${RPM_RELEASE}"
 
-.PHONY: all clean deb deb8 dist dist2 install rpm uninstall version
+.PHONY: all clean deb deb8 dist install rpm rpm-dist uninstall version
