--- a/builds/e2e/templates/e2e-run.yaml
+++ b/builds/e2e/templates/e2e-run.yaml
@@ -11,11 +11,11 @@ steps:
         $(Join-Path $env:ProgramFiles 'iotedge'),
         $(Join-Path $env:ProgramFiles 'iotedge-moby') -join ';'
 
-      dotnet vstest $testFile --logger:trx --testcasefilter:'Name~Metrics'
+      dotnet vstest $testFile --logger:trx
     }
     else
     {
-      sudo --preserve-env dotnet vstest $testFile --logger:trx --testcasefilter:'Name~Metrics'
+      sudo --preserve-env dotnet vstest $testFile --logger:trx
     }
   displayName: Run tests
   env:
