--- a/builds/e2e/connectivity.yaml
+++ b/builds/e2e/connectivity.yaml
@@ -14,57 +14,54 @@ jobs:
     timeoutInMinutes: 180
     strategy:
       matrix:
-        outer pre:
         Online:
           testrun.config: 1
           testrun.network.runProfile: "Online"
           testrun.network.frequencies: "00:00:00 00:00:00 0"
           testrun.duration: "01:00:00"
-          deploymentFileName: ${{ item }}
+          deploymentFileName: $('deploymentFileNames')
         Offline(5/5/5):
           testrun.config: 2
           testrun.network.frequencies: "00:05:00 00:05:00 5"
           testrun.network.runProfile: "Offline"
           testrun.duration: "00:50:00"
-          deploymentFileName: ${{ item }}
+          deploymentFileName: $('deploymentFileNames')
         Offline(10/10/3):
           testrun.config: 3
           testrun.network.frequencies: "00:10:00 00:10:00 3"
           testrun.network.runProfile: "Offline"
           testrun.duration: "01:00:00"
-          deploymentFileName: ${{ item }}
+          deploymentFileName: $('deploymentFileNames')
         Offline(15/15/3):
           testrun.config: 4
           testrun.network.frequencies: "00:15:00 00:15:00 3"
           testrun.network.runProfile: "Offline"
           testrun.duration: "01:30:00"
-          deploymentFileName: ${{ item }}
+          deploymentFileName: $('deploymentFileNames')
         Offline(30/30/2):
           testrun.config: 5
           testrun.network.frequencies: "00:30:00 00:30:00 2"
           testrun.network.runProfile: "Offline"
           testrun.duration: "02:00:00"
-          deploymentFileName: ${{ item }}
+          deploymentFileName: $('deploymentFileNames')
         Offline(5/20/3):
           testrun.config: 6
           testrun.network.frequencies: "00:05:00 00:20:00 3"
           testrun.network.runProfile: "Offline"
           testrun.duration: "01:15:00"
-          deploymentFileName: ${{ item }}
+          deploymentFileName: $('deploymentFileNames')
         SatelliteGood(60/0/1):
           testrun.config: 7
           testrun.network.frequencies: "01:00:00 00:00:00 1"
           testrun.network.runProfile: "SatelliteGood"
           testrun.duration: "01:00:00"
-          deploymentFileName: ${{ item }}
+          deploymentFileName: $('deploymentFileNames')
         Cellular3G(60/0/1):
           testrun.config: 8
           testrun.network.frequencies: "01:00:00 00:00:00 1"
           testrun.network.runProfile: "Cellular3G"
           testrun.duration: "01:00:00"
-          deploymentFileName: ${{ item }}
-        outer post:
-        loop: {{ $('deploymentFileNames') }}
+          deploymentFileName: $('deploymentFileNames')
     pool:
       name: $(pool.name)
       demands:
