--- a/builds/e2e/templates/longhaul-deploy-windows.yaml
+++ b/builds/e2e/templates/longhaul-deploy-windows.yaml
@@ -1,4 +1,5 @@
 parameters:
+  testName: ''
   release.label: ''
   test.buildNumber: ''
   test.buildId: ''
@@ -57,6 +58,7 @@ steps:
         $testInfo=$testInfo+",EdgeletSourceBranch=${{ parameters['edgelet.source.branch'] }}"
         $testInfo=$testInfo+",ImagesSourceBranch=${{ parameters['images.source.branch'] }}"
         $testInfo=$testInfo+",HostPlatform=${{ parameters['metricsCollector.hostPlatform'] }}"
+        $testInfo=$testInfo+",TestName=${{ parameters['testName'] }}"
         
         $ArtifactInfo=convertfrom-stringdata (get-content $(Agent.HomeDirectory)/../artifacts/${{ parameters['images.artifact.name'] }}/artifactInfo.txt -raw)
         $(Agent.HomeDirectory)/../artifacts/${{ parameters['images.artifact.name'] }}/scripts/windows/test/Run-E2ETest.ps1 `
