--- a/edgelet/contrib/config/windows/config.yaml
+++ b/edgelet/contrib/config/windows/config.yaml
@@ -58,29 +58,29 @@ provisioning:
 # provisioning:
 #   source: "dps"
 #   global_endpoint: "https://global.azure-devices-provisioning.net"
-#   scope_id: "{scope_id}"
+#   scope_id: "<SCOPE_ID>"
 #   attestation:
 #     method: "tpm"
-#     registration_id: "{registration_id}"
+#     registration_id: "<REGISTRATION_ID>"
 
 # DPS symmetric key provisioning configuration
 # provisioning:
 #   source: "dps"
 #   global_endpoint: "https://global.azure-devices-provisioning.net"
-#   scope_id: "{scope_id}"
+#   scope_id: "<SCOPE_ID>"
 #   attestation:
 #     method: "symmetric_key"
-#     registration_id: "{registration_id}"
-#     symmetric_key: "{symmetric_key}"
+#     registration_id: "<REGISTRATION_ID>"
+#     symmetric_key: "<SYMMETRIC_KEY>"
 
 # DPS X.509 provisioning configuration
 # provisioning:
 #   source: "dps"
 #   global_endpoint: "https://global.azure-devices-provisioning.net"
-#   scope_id: "{scope_id}"
+#   scope_id: "<SCOPE_ID>"
 #   attestation:
 #     method: "x509"
-#     registration_id: "<OPTIONAL REGISTRATION ID. IF UNSPECIFIED CAN BE OBTAINED FROM CN OF identity_cert"
+#     registration_id: "<OPTIONAL REGISTRATION ID. LEAVE COMMENTED OUT TO REGISTER WITH CN OF identity_cert>"
 #     identity_cert: "<REQUIRED URI TO DEVICE IDENTITY CERTIFICATE>"
 #     identity_pk: "<REQUIRED URI TO DEVICE IDENTITY PRIVATE KEY>"
 
