run if previous step is scceeded

--- a/builds/e2e/connectivity.yaml
+++ b/builds/e2e/connectivity.yaml
@@ -181,16 +181,16 @@ jobs:
             echo "deploymentFileName=$(deploymentFileName)"
       - template: templates/set-run-flag.yaml
       - checkout: none
-        condition: eq(variables['run.steps'], 1)
+        condition: and(succeeded(), eq(variables['run.steps'], 1))
       - task: AzureKeyVault@1
-        condition: eq(variables['run.steps'], 1)
+        condition: and(succeeded(), eq(variables['run.steps'], 1))
         displayName: 'Azure Key Vault'
         inputs:
           azureSubscription: $(azure.subscription)
           KeyVaultName: $(azure.keyVault)
           SecretsFilter: 'edgebuilds-azurecr-io-username,edgebuilds-azurecr-io-pwd,EdgeConnectivityTestHubConnString,EdgeConnectivityEventHubConnString,kvLogAnalyticWorkspaceId,kvLogAnalyticSharedKey,EdgeConnectivityStorageAccountConnString'
       - task: DownloadBuildArtifacts@0
-        condition: eq(variables['run.steps'], 1)
+        condition: and(succeeded(), eq(variables['run.steps'], 1))
         displayName: 'Download Edgelet Artifacts'
         inputs:
           buildType: specific
@@ -201,7 +201,7 @@ jobs:
           downloadPath: '$(Build.StagingDirectory)'
           artifactName: $(edgelet.artifact.name)
       - task: DownloadBuildArtifacts@0
-        condition: eq(variables['run.steps'], 1)
+        condition: and(succeeded(), eq(variables['run.steps'], 1))
         displayName: 'Download Images Artifacts'
         inputs:
           buildType: specific
