Revert some unneccessary fixes

--- a/mqtt/Dockerfile
+++ b/mqtt/Dockerfile
@@ -5,7 +5,7 @@
 
 # You can override this `--build-arg BASE_IMAGE=...` to use different
 # version of Rust or OpenSSL.
-ARG BASE_IMAGE=ekidd/rust-musl-builder:beta
+ARG BASE_IMAGE=ekidd/rust-musl-builder:stable
 
 # Our first FROM statement declares the build environment.
 FROM ${BASE_IMAGE} AS builder
