Persist serialization to disk

--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -8,11 +8,12 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1"
+bincode = "1.2"
 failure = "0.1"
 futures-util = { version = "0.3", features = ["sink"] }
 lazy_static = "1"
 serde = { version = "1.0", features = ["derive", "rc"] }
-tokio = { version = "0.2", features = ["macros", "rt-threaded", "signal", "stream", "sync", "tcp"] }
+tokio = { version = "0.2", features = ["blocking", "stream", "sync", "tcp"] }
 tokio-io-timeout = "0.4"
 tokio-util = { version = "0.2", features = ["codec"] }
 tracing = "0.1"
